--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="" />
     <title>Blog Home </title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/blog-post/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://madaanvaibhav.github.io/dhruv/blog-post/assets/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/blog-post/css/styles.css" rel="stylesheet" />
+    <link href="https://madaanvaibhav.github.io/dhruv/blog-post/css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -172,7 +172,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="/blog-post/js/scripts.js"></script>
+    <script src="https://madaanvaibhav.github.io/dhruv/blog-post/js/scripts.js"></script>
 </body>
 
 </html>
