--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                     <!--<li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>-->
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="/blog-post/index.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="https://madaanvaibhav.github.io/dhruv/blog-post/index.html">Blog</a></li>
                 </ul>
             </div>
         </div>
@@ -45,12 +45,12 @@
             <div class="col-lg-8">
                 <!-- Featured blog post-->
                 <div class="card mb-4">
-                    <a href="/blog-post/index.html"><img class="card-img-top" src="https://cdnicai.s3.ap-south-1.amazonaws.com/images/slider/75thindayicai-new.jpg" alt="..." /></a>
+                    <a href="https://madaanvaibhav.github.io/dhruv/blog-post/index.html"><img class="card-img-top" src="https://cdnicai.s3.ap-south-1.amazonaws.com/images/slider/75thindayicai-new.jpg" alt="..." /></a>
                     <div class="card-body">
                         <div class="small text-muted">January 1, 2021</div>
                         <h2 class="card-title">1st Blog</h2>
                         <p class="card-text">The minimum qualification required to pursue ICAI CA course is Class 12. The candidates who have passed Class 12 can take up CPT course. Common Proficiency Test (CPT) is the beginning stage to start a career in Charted Accountancy. The second stage is IPCC (Intermediate) and the last stage is CA Final.</p>
-                        <a class="btn btn-primary" href="/blog-post/index.html">Read more →</a>
+                        <a class="btn btn-primary" href="https://madaanvaibhav.github.io/dhruv/blog-post/index.html">Read more →</a>
                     </div>
                 </div>
                 <!-- Nested row for non-featured blog posts-->
